# nuql

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml
nuql/: __init__.py  client.py  connection.py  exceptions.py
nuql/api/: __init__.py  adapter.py  batch_write.py  condition_check.py  create.py  delete.py  get.py  put.py  put_item.py  put_update.py  transaction.py  upsert.py
nuql/api/batch_get/: __init__.py  batch_get.py  queue.py
nuql/api/query/: __init__.py  condition.py  condition_builder.py  key_condition.py  query.py
nuql/api/query/condition/: __init__.py  builder.py  condition.py
nuql/api/update/: __init__.py  expression_builder.py  update.py  update_item.py  utils.py
nuql/fields/: __init__.py  boolean.py  datetime.py  datetime_timestamp.py  dict.py  float.py  integer.py  key.py  list.py  map.py  string.py  ulid.py  uuid.py
nuql/generators/: __init__.py  datetime.py  ulid.py  uuid.py
nuql/resources/: __init__.py
nuql/resources/fields/: __init__.py  field.py  field_map.py  value.py
nuql/resources/records/: __init__.py  projections.py  serialiser.py  validator.py
nuql/resources/tables/: __init__.py  indexes.py  schemas.py  table.py
nuql/resources/utils/: __init__.py  dict.py  validators.py
nuql/types/: __init__.py  api.py  config.py  fields.py  serialisation.py
tests/: test_client.py
