[project]
name = "nuql"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.0",
    "pyparsing>=3.2.3",
    "python-ulid>=3.0.0",
]

[[tool.uv.index]]
url = "https://bdois-090779586235.d.codeartifact.ap-southeast-2.amazonaws.com/pypi/bdois/simple/"

[dependency-groups]
testing = [
    "coverage>=7.10.2",
    "pytest>=8.4.1",
]
